# hot-restart

./: .envrc  .gitignore  CLAUDE.md  README.md  darksign.py  dev-requirements.txt  hot_restart.py  justfile  pyproject.toml  shell.nix  test.py  test_fallback.py  test_ipdb.py  test_ipdb_simple.py
tests/: README.md  conftest.py  manual.py  manual_class.py  manual_reload_all.py  test_ast_classes.py  test_class_identity.py  test_debugger_classes.py  test_decorator_line_fix.py  test_integration.py  test_ipdb_integration.py  test_line_number_tolerance.py  test_manual_scenario.py  test_multiline_decorator.py  test_nested_wrap_cache.py  test_overlap_matching.py  test_pexpect.py  test_reload_all.py  test_utility_functions.py  test_wrap_class.py  test_wrap_modules.py  test_wrap_warnings.py
tests/basic/: in_1.py  in_2.py
tests/child_class/: in_1.py  in_2.py
tests/closure/: in_1.py  in_2.py
tests/ipdb_basic/: expected_out.txt  in_1.py  in_2.py
tests/nested_functions/: in_1.py  in_2.py
tests/wrap_modules_test/: myapp_module1.py  myapp_module2.py  nowrap_module.py  other_module.py  test_helpers.py  test_utils.py
tests/wrap_modules_test/app/: __init__.py  single.py
tests/wrap_modules_test/app/core/: __init__.py  models.py
tests/wrap_modules_test/app/utils/: __init__.py  helpers.py
tests/wrap_modules_test/other/: __init__.py
tests/wrap_modules_test/other/core/: __init__.py  models.py
tests/wrap_warnings/: check_warnings.py  explicit_wrap_test.py  module_wrap_test.py
