[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hot_restart"
authors = [{name = "K.R. Zentner", email = "krzentner@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
readme = "README.md"

[project.urls]
Home = "https://github.com/krzentner/hot-restart"
