[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hot_restart"
authors = [{ name = "K.R. Zentner", email = "krzentner@gmail.com" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/krzentner/hot-restart"

[dependency-groups]
recommended = ["ipdb>=0.13.13"]
